--- a/config/default.yaml
+++ b/config/default.yaml
@@ -195,11 +195,14 @@ links:
   surveyEndOfApplication: 'https://www.smartsurvey.co.uk/s/SurveyExit/?service=Probate'
   ihtNotCompleted: 'https://www.gov.uk/valuing-estate-of-someone-who-died/tell-hmrc-estate-value'
   applicationFormPA14: 'https://www.gov.uk/government/publications/form-pa14-medical-certificate-probate'
-  applicationFormPA15: 'https://www.gov.uk/government/publications/form-pa15-apply-for-renunciation-will'
+  applicationFormPA15: 'https://www.gov.uk/government/publications/form-pa15-give-up-probate-executor-rights'
   applicationFormPA1A: 'https://www.gov.uk/government/publications/form-pa1a-apply-for-probate-deceased-did-not-leave-a-will'
   applicationFormPA1P: 'https://www.gov.uk/government/publications/form-pa1p-apply-for-probate-the-deceased-had-a-will'
   applicationFormPA19: 'https://www.gov.uk/government/publications/form-pa19-apply-for-a-grant-of-representation-with-a-foreign-death-certificate-not-translated-by-a-licensed-company'
   deathCertificate: 'https://www.gov.uk/order-copy-birth-death-marriage-certificate'
+  hmctAccessAccessibilityStatement: 'https://hmcts-access.service.gov.uk/accessibility-statement'
+  payAccessibilityStatement: 'https://www.payments.service.gov.uk/accessibility-statement/'
+  notifyAccessibilityStatement: 'https://www.notifications.service.gov.uk/accessibility-statement'
   deathReportedToCoroner: 'https://www.gov.uk/after-a-death/when-a-death-is-reported-to-a-coroner'
   findOutNext: 'https://www.gov.uk/wills-probate-inheritance/once-the-grants-been-issued'
   whoInherits: 'https://www.gov.uk/inherits-someone-dies-without-will'
