--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,30 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>hmcts/.github:renovate-config"
-],
-  "prConcurrentLimit": 6,
-  "prHourlyLimit": 3,
-  "labels": ["dependencies"],
-  "helm-requirements":
-  {
-    "fileMatch": ["\\Chart.yaml$"],
-    "aliases": {
-      "hmctspublic": "https://hmctspublic.azurecr.io/helm/v1/repo/"
-    }
-  },
-  "separateMajorMinor": false,
-  "packageRules": [
-    {
-      "matchPackageNames": ["ansi-regex"],
-      "allowedVersions": "<=5"
-    },
-    {
-      "matchPackageNames": ["redis"],
-      "allowedVersions": "<=3"
-    }
   ],
-  "lockFileMaintenance": {
-    "enabled": false
-  },
-  "schedule": ["before 6am"]
+  "labels": ["dependencies"],
+  "schedule": ["after 8am and before 2pm every weekday"]
 }
