use feature toggle to switch to new implementation.

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -18,7 +18,8 @@ featureToggles:
   ft_excepted_estates: 'probate-excepted-estates'
   ft_will_condition : 'probate-will-condition'
   ft_stop_ihtonline : 'probate-stop-ihtonline'
-  appwideToggles: ['ft_avaya_webchat']
+  ft_use_new_webchat : 'probate-use-new-webchat'
+  appwideToggles: ['ft_avaya_webchat', 'ft_use_new_webchat']
 # overrides featureToggles to e.g. switch off in pipeline/locally
 configFeatureToggles:
   webchatEnabled: true
