--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "cross-spawn": "^7.0.6",
     "express": "^4.21.2",
     "formidable": "^3.5.4",
+    "form-data": "^4.0.4",
     "hosted-git-info": "^8.1.0",
     "http-cache-semantics": ">=4.2.0",
     "import-in-the-middle": "^1.14.2",
