--- a/config/default.yaml
+++ b/config/default.yaml
@@ -18,7 +18,8 @@ featureToggles:
   ft_excepted_estates: 'probate-excepted-estates'
   ft_will_condition : 'probate-will-condition'
   ft_stop_ihtonline : 'probate-stop-ihtonline'
-  appwideToggles: ['ft_avaya_webchat']
+  ft_use_new_webchat : 'probate-use-new-webchat'
+  appwideToggles: ['ft_avaya_webchat', 'ft_use_new_webchat']
 # overrides featureToggles to e.g. switch off in pipeline/locally
 configFeatureToggles:
   webchatEnabled: true
@@ -175,6 +176,14 @@ webchat:
   avayaUrl: 'webchat.pp.ctsc.hmcts.net'
   avayaClientUrl: 'webchat-client.pp.ctsc.hmcts.net'
   avayaService: 'Testing'
+  kerv:
+    deploymentId:
+      en: 'kerv-deployment-en'
+      cy: 'kerv-deployment-cy'
+    genesysBaseUrl: 'kerv-genesys-base-url'
+    environment: 'kerv-environment'
+    kervBaseUrl: 'kerv-kerv-base-url'
+    apiKey: 'kerv-api-key'
 links:
   accessibility: '/accessibility-statement'
   cookies: '/cookies'
