--- a/config/default.yaml
+++ b/config/default.yaml
@@ -195,6 +195,7 @@ links:
   surveyEndOfApplication: 'https://www.smartsurvey.co.uk/s/SurveyExit/?service=Probate'
   ihtNotCompleted: 'https://www.gov.uk/valuing-estate-of-someone-who-died/tell-hmrc-estate-value'
   applicationFormPA14: 'https://www.gov.uk/government/publications/form-pa14-medical-certificate-probate'
+  applicationFormPA17: 'https://www.gov.uk/government/publications/form-pa17-give-up-probate-executor-rights-for-probate-practitioners'
   applicationFormPA15: 'https://www.gov.uk/government/publications/form-pa15-give-up-probate-executor-rights'
   applicationFormPA1A: 'https://www.gov.uk/government/publications/form-pa1a-apply-for-probate-deceased-did-not-leave-a-will'
   applicationFormPA1P: 'https://www.gov.uk/government/publications/form-pa1p-apply-for-probate-the-deceased-had-a-will'
