increase preview memory limits to prevent oom in tests.
also increase the request values to hopefully reduce the possibility of
pod eviction. i think we likely need to investigate whether the normal
operations here are leaking (or rather storing value in accessible)
memory.

--- a/charts/probate-frontend/values.preview.template.yaml
+++ b/charts/probate-frontend/values.preview.template.yaml
@@ -1,10 +1,10 @@
 nodejs:
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_NAME}.preview.platform.hmcts.net
-  memoryRequests: 64Mi
-  memoryLimits: 1Gi
-  devmemoryRequests: 64Mi
-  devmemoryLimits: 1Gi
+  memoryRequests: 1Gi
+  memoryLimits: 2Gi
+  devmemoryRequests: 1Gi
+  devmemoryLimits: 2Gi
   autoscaling:
     enabled: false
   environment:
