set node's max heap to the memlimit.
we should probably set it _lower_ than the memlimit but currently it's
being defaulted and our test containers are oom-ing.

--- a/charts/probate-frontend/values.preview.template.yaml
+++ b/charts/probate-frontend/values.preview.template.yaml
@@ -13,6 +13,7 @@ nodejs:
     REDIS_USE_TLS: false
     LAUNCHDARKLY_ENABLED: true
     DYNATRACE_URL: /public/javascripts/document-upload.js
+    NODE_OPTIONS: '--max-old-space-size=2048'
   keyVaults:
     probate:
       resourceGroup: probate
