DTSPB-4967 rollback ft_fees_api

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -10,6 +10,7 @@ featureToggles:
     firstName: 'Probate'
     lastName: 'Frontend'
     key: 'LAUNCHDARKLY_USER_KEY'
+  ft_fees_api: 'probate-fees-api'
   ft_pcq: 'probate-pcq'
   ft_pcq_token: 'probate-pcq-token'
   ft_avaya_webchat: 'probate-avaya-webchat'
