--- a/charts/probate-frontend/values.yaml
+++ b/charts/probate-frontend/values.yaml
@@ -20,7 +20,7 @@ nodejs:
     IDAM_API_URL: https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net
     IDAM_S2S_URL: http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     PAYMENT_API_URL: http://payment-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
-    VALIDATION_SERVICE_URL: http://probate-business-service-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/validate
+    VALIDATION_SERVICE_URL: http://probate-business-service-pr-1162-java/validate
     ORCHESTRATOR_SERVICE_URL: http://probate-orchestrator-service-pr-1406-java
     FEES_REGISTRY_URL: http://fees-register-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/fees-register
     REFORM_ENVIRONMENT : '{{ .Values.global.environment }}'
