--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass-ie8": "NODE_PATH=. sass app/assets/sass/application-ie8.scss:public/stylesheets/application-ie8.css --quiet --style=expanded --source-map --load-path=node_modules",
     "test": "npx if-env CI=true && mkdir -m 777 output && exit 0 || yarn test-unit $@ && yarn test-component $@",
     "test-unit": "NODE_ENV=testing-unit NODE_PATH=. LOG_LEVEL=error mocha test/unit --reporter mochawesome --reporter-options reportDir=output,reportFilename=results --recursive --timeout 15000 --unhandled-rejections=strict",
+    "test-unit-abc": "NODE_ENV=testing-unit NODE_PATH=. LOG_LEVEL=error mocha test/unit/executors/testParentAdoptionPlace.js --reporter mochawesome --reporter-options reportDir=output,reportFilename=results --recursive --timeout 15000",
     "test-unit-healthcheck": "NODE_ENV=testing-unit NODE_PATH=. LOG_LEVEL=error mocha test/unit/utils/testSetupHealthCheck.js --reporter mochawesome --reporter-options reportDir=output,reportFilename=results --recursive --timeout 15000",
     "test-unit-grep": "NODE_ENV=testing-unit NODE_PATH=. LOG_LEVEL=error mocha test/unit --reporter mochawesome --reporter-options reportDir=output,reportFilename=results --recursive --timeout 15000 --grep",
     "test-component": "NODE_ENV=testing-component NODE_PATH=. LOG_LEVEL=error mocha test/component --reporter spec --recursive --timeout 15000",
