DTSPB-5014 add nonIdamPages to custom-environment-variables.yaml

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -83,6 +83,8 @@ payment:
 appInsights:
   connectionString: APP-INSIGHTS-CONNECTION-STRING
 
+nonIdamPages: NON_IDAM_PAGES
+
 TestCitizenDomain: CITIZEN_EMAIL_DOMAIN
 TestE2EFrontendUrl: TEST_URL
 TestFrontendUrl: TEST_URL
