--- a/config/dev-pr.yaml
+++ b/config/dev-pr.yaml
@@ -15,7 +15,7 @@ services:
     probate_redirect_base_url: http://localhost:3001
     caching: true
   orchestrator:
-    url: http://probate-orchestrator-service-pr-789.preview.platform.hmcts.net/
+    url: https://probate-orchestrator-service-pr-789.preview.platform.hmcts.net
   validation:
     url: http://probate-business-service-aat.service.core-compute-aat.internal/validate
   payment:
