--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "test-component-web-chat": "NODE_ENV=testing-component NODE_PATH=. LOG_LEVEL=error mocha test/component/static/testAvayaWebchat.js --reporter spec --recursive --timeout 15000",
     "test:a11y": "NODE_ENV=testing NODE_PATH=. LOG_LEVEL=ERROR mocha --exit test/accessibility --reporter spec --recursive --timeout 15000 --exit --reporter mochawesome --reporter-options reportDir=functional-output,reportFilename=a11y",
     "test-accessibility": "NODE_ENV=testing NODE_PATH=. LOG_LEVEL=error ENABLE_TRACKING=false mocha test/accessibility --timeout 30000",
-    "test-e2e": "NODE_ENV=testing-http DONT_FAIL_ON_EMPTY_RUN=1 NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/ --steps --grep @e2enightly --reporter mocha-multi",
+    "test-e2e": "multi='mochawesome=./temp-reports/report.json mocha-junit-reporter=./output/junit-report.xml' NODE_ENV=testing-http DONT_FAIL_ON_EMPTY_RUN=1 NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/codecept.conf.js --steps --grep @e2enightly --reporter mocha-multi",
     "test-e2e-launch-darkly": "NODE_ENV=testing-dk NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run -c ./test/end-to-end/ --steps --reporter mochawesome",
     "test-e2e-http": "NODE_ENV=testing-http NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run -c ./test/end-to-end/ --steps --reporter mochawesome",
-    "test-e2e-http-launch-darkly": "NODE_ENV=testing-http-dk DONT_FAIL_ON_EMPTY_RUN=1 NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/ --steps --grep @e2emaster --reporter mocha-multi",
+    "test-e2e-http-launch-darkly": "multi='mochawesome=./temp-reports/report.json mocha-junit-reporter=./output/junit-report.xml' NODE_ENV=testing-http-dk DONT_FAIL_ON_EMPTY_RUN=1 NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/codecept.conf.js --steps --grep @e2emaster --reporter mocha-multi",
     "test-e2e-gop-single-exec-aat": "NODE_ENV=testing-e2e-local-to-aat NODE_PATH=. FE_E2E_TEST_PATH_TO_RUN=./paths/probate/gopSingleExecutor.en.test.js node ./node_modules/codeceptjs/bin/codecept.js run -c ./test/end-to-end/ --steps --reporter mochawesome",
     "test-e2e-gop-creditCardPaymentCancellation-http": "NODE_ENV=testing-http NODE_PATH=. FE_E2E_TEST_PATH_TO_RUN=./paths/other/creditCardPaymentCancellation.js node ./node_modules/codeceptjs/bin/codecept.js run -c ./test/end-to-end/ --steps",
     "test-e2e-gop-single-exec-http": "NODE_ENV=testing-http NODE_PATH=. FE_E2E_TEST_PATH_TO_RUN=./paths/probate/gopSingleExecutor.en.test.js node ./node_modules/codeceptjs/bin/codecept.js run -c ./test/end-to-end/ --steps",
@@ -69,7 +69,8 @@
     "eslint": "NODE_PATH=. eslint .",
     "test:functional": "NODE_ENV=test yarn test-contract && NODE_ENV=test yarn test-e2e-http-launch-darkly",
     "test:fullfunctional": "yarn playwright install && DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=test-dk NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/ --steps --grep '@e2enightly'",
-    "test:fullfunctional-pr": "yarn playwright install && DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=test-dk NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/ --steps --grep '@e2enightly-pr'",
+    "test:fullfunctional-pr": "yarn playwright install && DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=test NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/codecept.e2e.conf.js --steps --grep '@e2enightly-pr' || true && echo 'Tests completed. Checking for reports...' && find ./functional-output -name '*.json' -type f && yarn merge-reports",
+    "merge-reports": "bash bin/merge-reports.sh",
     "test:fullfunctional:dev-aat:single": "TEST_HEADLESS=false NODE_ENV=dev-aat NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run -c ./test/end-to-end/ --steps --verbose --grep '@runningNow'",
     "test:fullfunctional:dev-aat:parallel": "TEST_HEADLESS=true DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=dev-aat NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/ --steps --grep '@e2enightly'",
     "test:coverage": "NODE_ENV=test NODE_PATH=. nyc --reporter=lcov --reporter-options reportDir=output,reportFilename=results mocha './test/unit/**/test*.js' './test/component/**/test*.js' --timeout 10000 --recursive --exit",
@@ -176,10 +177,11 @@
     "if-env": "^1.0.4",
     "ip": "^2.0.1",
     "mocha": "^11.0.0",
-    "mocha-jenkins-reporter": "^0.4.8",
     "mocha-junit-reporter": "^2.0.0",
     "mocha-multi": "^1.1.7",
-    "mochawesome": "^7.1.3",
+    "mochawesome": "^7.1.4",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
     "nock": "^14.0.0",
     "nodemon": "^3.1.9",
     "nyc": "^17.0.0",
