DTSPB-4865 - Delete the test result file and find command in package.json

--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "lint": "NODE_PATH=. eslint .",
     "eslint": "NODE_PATH=. eslint .",
     "test:functional": "NODE_ENV=test yarn test-contract && NODE_ENV=test yarn test-e2e-http-launch-darkly",
-    "test:fullfunctional": "yarn playwright install && DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=test-dk NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/codecept.e2e.conf.js --steps --grep '@e2enightly'; TEST_EXIT_CODE=$?; find ./functional-output -name '*.json' -type f; yarn merge-reports; exit $TEST_EXIT_CODE",
-    "test:fullfunctional-pr": "yarn playwright install && DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=test NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/codecept.e2e.conf.js --steps --grep '@e2enightly-pr'; TEST_EXIT_CODE=$?; echo 'Tests completed. Checking for reports...'; find ./functional-output -name '*.json' -type f; yarn merge-reports; exit $TEST_EXIT_CODE",
+    "test:fullfunctional": "yarn playwright install && DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=test-dk NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/codecept.e2e.conf.js --steps --grep '@e2enightly'; TEST_EXIT_CODE=$?; yarn merge-reports; exit $TEST_EXIT_CODE",
+    "test:fullfunctional-pr": "yarn playwright install && DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=test NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/codecept.e2e.conf.js --steps --grep '@e2enightly-pr'; TEST_EXIT_CODE=$?; echo 'Tests completed. Checking for reports...'; yarn merge-reports; exit $TEST_EXIT_CODE",
     "merge-reports": "bash bin/merge-reports.sh",
     "test:fullfunctional:dev-aat:single": "TEST_HEADLESS=false NODE_ENV=dev-aat NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run -c ./test/end-to-end/ --steps --verbose --grep '@runningNow'",
     "test:fullfunctional:dev-aat:parallel": "TEST_HEADLESS=true DONT_FAIL_ON_EMPTY_RUN=1 NODE_ENV=dev-aat NODE_PATH=. node ./node_modules/codeceptjs/bin/codecept.js run-multiple parallel -c ./test/end-to-end/ --steps --grep '@e2enightly'",
