DTSPB-4720 fixed typo

--- a/config/dev-aat.yaml
+++ b/config/dev-aat.yaml
@@ -15,12 +15,11 @@ services:
     probate_redirect_base_url: http://localhost:3001
     caching: true
   orchestrator:
-    #url: http://probate-orchestrator-service-aat.service.core-compute-aat.internal
-    url: http://localhost:8888
+    url: http://probate-orchestrator-service-aat.service.core-compute-aat.internal
   validation:
     url: http://probate-business-service-aat.service.core-compute-aat.internal/validate
   payment:
-    url: http://payment-api-aat.service.core-compute-aat.intßernal
+    url: http://payment-api-aat.service.core-compute-aat.internal
   feesRegister:
     url: http://fees-register-api-aat.service.core-compute-aat.internal/fees-register
 redis:
